fix: swiping on mobile wasn't working.

--- a/src/style.css
+++ b/src/style.css
@@ -217,6 +217,7 @@ h1 {
 .swiper-slides {
   display: flex;
   transition: transform 0.3s ease;
+  touch-action: pan-y;
 }
 
 .swiper-slide {
